--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 attrs==17.4.0
 certifi==2018.4.16
 chardet==3.0.4
-elasticsearch==5.5.2
+docopt==0.6.2
+future==0.16.0
 idna==2.6
 more-itertools==4.1.0
 pluggy==0.6.0
